testsuite/tests/typecheck/should_fail/UnliftedNewtypesInstanceFail.stderr

UnliftedNewtypesInstanceFail.hs:13:3: error:
    • Expected a WordRep type, but ‘Bar Bool’ is an IntRep type
    • In the newtype instance declaration for ‘Bar’
      In the instance declaration for ‘Foo Bool’
